--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,6 @@ a:visited {
 .archive-year,
 .widget-title {
   text-decoration: none;
-  text-transform: uppercase;
   color: #999;
   line-height: 1em;
 }
@@ -697,7 +696,6 @@ a:visited {
 #profile .inner .article-info .article-info-block span {
   display: block;
   font-size: 14px;
-  text-transform: uppercase;
 }
 #profile .inner .article-info .article-info-block:first-child {
   border-right: 1px solid #eceff2;
@@ -829,7 +827,7 @@ a:visited {
 }
 .article-title {
   text-decoration: none;
-  font-size: 2em;
+  font-size: 1.8em;
   color: #565a5f;
   line-height: 1.1em;
   -webkit-transition: color 0.2s;
@@ -1111,9 +1109,8 @@ a.article-title:hover {
   line-height: 1em;
   font-weight: bold;
   color: #565a5f;
-  text-transform: uppercase;
 }
-#article-nav-newer .article-nav-caption {
+#article-nav-newer {
   margin-right: -2px;
 }
 .article-nav-title {
@@ -1980,7 +1977,6 @@ pre .javascript .function {
 #recent-post li .item-inner a,
 #recent-post li .item-inner .item-category {
   font-size: 13px;
-  text-transform: uppercase;
 }
 #recent-post li .item-inner a a,
 #recent-post li .item-inner .item-category a {
@@ -2009,7 +2005,6 @@ pre .javascript .function {
 #recent-post li .item-inner .item-date {
   color: #aaa;
   font-size: 13px;
-  text-transform: uppercase;
 }
 #recent-post li:hover .item-thumbnail {
   opacity: 0.8;
