--- a/css/style.css
+++ b/css/style.css
@@ -1553,6 +1553,9 @@ ol.toc {
   overflow: auto;
   color: #ccc;
   line-height: 22.400000000000002px;
+  background: #333;
+  margin: 1px 10px 1px 10px;
+  border: 3px solid #eee;
 }
 .article-entry .highlight .gutter pre,
 .article-entry .gist .gist-file .gist-data .line-numbers {
@@ -1615,7 +1618,7 @@ ol.toc {
   border-style: solid;
   border-color: #eceff2;
   border-width: 1px 0;
-  background: #34383d;
+  background: none;
   padding: 15px 20px 15px 0;
 }
 .article-entry .gist .gist-file {
@@ -1649,7 +1652,7 @@ ol.toc {
   border: none;
 }
 .article-entry .gist .gist-file .gist-meta {
-  background: #34383d;
+  background: none;
   color: #999;
   font: 0.85em "open sans", "Helvetica Neue", "Microsoft Yahei", Helvetica, Arial, sans-serif;
   text-shadow: 0 0;
